# oboe_pitch_detection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/oboepitch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/oboepitch/: MainActivity.kt  PitchWheelView.kt
app/src/main/res/drawable/: baseline_circle_24.xml
app/src/main/res/layout/: activity_main.xml  pitch_wheel_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oboepitch/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
